@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -bug#0001244: missing closing </form> on host.php
 -bug#0001247: snmp ping won't work for snmp v3
 -bug#0001256: Spine-poller.c : Bug in size string sysUptime 
+-bug#0001258: "Remove Verification" is an ambiguous definition, leads to data loss
 -bug#0001259: LDAP Authentication using Solaris 10 standard ldap client fails
 -bug#0001262: Do not allow deletion of Graph Export User
 -bug#0001273: Escape windows paths to accomodate spaces
